trunk/Archive2/54/3749ea53e99053/output
main.cpp: In function 'int main()':
main.cpp:43:35: error: 'my_allocator' was not declared in this scope
         auto c = std::vector<int, my_allocator<int>>{};
                                   ^
main.cpp:43:51: error: template argument 2 is invalid
         auto c = std::vector<int, my_allocator<int>>{};
                                                   ^
main.cpp:49:41: error: 'my_allocator' was not declared in this scope
         auto c = std::forward_list<int, my_allocator<int>>{};
                                         ^
main.cpp:49:57: error: template argument 2 is invalid
         auto c = std::forward_list<int, my_allocator<int>>{};
                                                         ^
